# inkjet

./: .gitignore  .gitmodules  CMakeLists.txt  application.cpp  application.h  hello_world.cpp  inkjet.cpp  inkjet.h  main.cpp  readme.md
comm/serial/: serial.cpp
example/: application.cpp  application.h  main.cpp
inkjet/: inkjet.cpp  inkjet.h
inkjet/comm/serial/: serial.cpp  serial.h
inkjet/inkjet/: inkjet.cpp  inkjet.h
inkjet/inkjet/comm/: comm.cpp  comm.h
inkjet/inkjet/comm/serial/: serial.cpp  serial.h
inkjet/inkjet/comm/socket/: socket.cpp  socket.h  udp_client.cpp  udp_client.h
inkjet/inkjet/layout/: width_layout.cpp  width_layout.h
inkjet/inkjet/state_machine/: state_machine.cpp  state_machine.h
